внесено виправленя в scss

--- a/sass/components/_beckdrop-modal-form.scss
+++ b/sass/components/_beckdrop-modal-form.scss
@@ -156,7 +156,7 @@
     .contact-form__field:active + &,
     .contact-form__field:hover + &,
     .contact-form__field:focus + &{
-            color: var(--accent-color);
+            color: $accent-color;
         }
 }
 .contact-form__field-coment {
@@ -208,7 +208,7 @@
     margin-right: 7px;
     align-items: center;
     justify-content: center;
-    border: 2px solid var(--title-text-color);
+    border: 2px solid $title-text-color;
     border-radius: 2px;
 
     background-color: $primary-white-color;
@@ -218,7 +218,7 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     .contact-form__checkbox-input:checked + & {
             border-color: transparent;
-            background-color: var(--accent-color);
+            background-color: $accent-color;
         }
 }
 .contact-form__checkbox-icon {
@@ -228,7 +228,7 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     .contact-form__checkbox-input:checked + .contact-form__wrapper-icon & {
-            color: var(--primary-white-color);
+            color: $primary-white-color;
             opacity: 1;
         }
 }
