--- a/css/main.css
+++ b/css/main.css
@@ -789,7 +789,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-form__field:active + .contact-form__icon, .contact-form__field:hover + .contact-form__icon, .contact-form__field:focus + .contact-form__icon {
-  color: var(--accent-color);
+  color: #2196f3;
 }
 
 .contact-form__field-coment {
@@ -844,7 +844,7 @@ body {
   margin-right: 7px;
   align-items: center;
   justify-content: center;
-  border: 2px solid var(--title-text-color);
+  border: 2px solid #212121;
   border-radius: 2px;
   background-color: #ffffff;
   background-origin: border-box;
@@ -854,7 +854,7 @@ body {
 }
 .contact-form__checkbox-input:checked + .contact-form__wrapper-icon {
   border-color: transparent;
-  background-color: var(--accent-color);
+  background-color: #2196f3;
 }
 
 .contact-form__checkbox-icon {
@@ -865,7 +865,7 @@ body {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-form__checkbox-input:checked + .contact-form__wrapper-icon .contact-form__checkbox-icon {
-  color: var(--primary-white-color);
+  color: #ffffff;
   opacity: 1;
 }
 
