--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   overflow: hidden;
 }
 
-.footer__adress-list, .works, .filter-bar, .clients__list, .social-networks, .our-team__list, .services__list, .benefits__list, .header__site-contact, .header__site-nav {
+.adress__list, .works, .filter-bar, .clients__list, .social-networks, .our-team__list, .services__list, .benefits__list, .site-contact, .site-nav {
   list-style: none;
   padding: 0;
   margin: 0;
@@ -54,12 +54,10 @@ body {
   background-color: #ffffff;
   color: #757575;
 }
-
 .header__navigation {
   display: flex;
   align-items: center;
 }
-
 .header__logo {
   padding-top: 25px;
   padding-bottom: 25px;
@@ -76,16 +74,14 @@ body {
   padding-bottom: 25px;
 }
 
-.header__site-nav {
+.site-nav {
   display: flex;
   align-items: center;
 }
-
-.header__item-page:not(:last-child) {
+.site-nav__item-page:not(:last-child) {
   margin-right: 50px;
 }
-
-.header__link {
+.site-nav__link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -100,14 +96,14 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header__link:hover, .header__link:focus, .header__link:active {
+.site-nav__link:hover, .site-nav__link:focus, .site-nav__link:active {
   color: #2196f3;
 }
-.header__link--active {
+.site-nav__link--active {
   position: relative;
   color: #2196f3;
 }
-.header__link--active::after {
+.site-nav__link--active::after {
   content: "";
   position: absolute;
   bottom: 0;
@@ -118,17 +114,15 @@ body {
   border-radius: 2px;
 }
 
-.header__site-contact {
+.site-contact {
   display: flex;
   align-items: center;
   margin-left: auto;
 }
-
-.header__item-contact:not(:last-child) {
+.site-contact__item:not(:last-child) {
   margin-right: 50px;
 }
-
-.header__contact-info {
+.site-contact__info {
   display: flex;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -143,11 +137,10 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.header__contact-info:hover, .header__contact-info:focus, .header__contact-info:active {
+.site-contact__info:hover, .site-contact__info:focus, .site-contact__info:active {
   color: #2196f3;
 }
-
-.header__contact-icon {
+.site-contact__icon {
   margin-right: 10px;
   fill: currentColor;
 }
@@ -184,7 +177,6 @@ body {
   background-position: center;
   background-size: cover;
 }
-
 .hero__container {
   width: 1200px;
   padding-left: 15px;
@@ -193,7 +185,6 @@ body {
   margin-right: auto;
   text-align: center;
 }
-
 .hero__title {
   text-align: center;
   margin: 0 auto;
@@ -207,7 +198,6 @@ body {
   letter-spacing: 0.06em;
   color: #ffffff;
 }
-
 .hero__button {
   display: inline-block;
   padding: 10px 32px;
@@ -237,7 +227,6 @@ body {
   display: flex;
   padding-bottom: 0;
 }
-
 .benefits__title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -249,20 +238,17 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .benefits__list {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-
 .benefits__item {
   min-width: calc((100% - 90px) / 4);
 }
 .benefits__item:not(:last-child) {
   margin-right: 30px;
 }
-
 .benefits__icon-wrapper {
   display: flex;
   background-color: #f5f4fa;
@@ -272,7 +258,6 @@ body {
   justify-content: center;
   align-items: center;
 }
-
 .benefits__header {
   margin-top: 0;
   margin-bottom: 10px;
@@ -284,7 +269,6 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .benefits__description {
   margin-top: 0;
   margin-bottom: 0;
@@ -294,7 +278,6 @@ body {
 .services__container {
   flex-direction: column;
 }
-
 .services__title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -306,11 +289,9 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .services__list {
   display: flex;
 }
-
 .services__item {
   position: relative;
   width: calc((100% - 60px) / 3);
@@ -318,11 +299,9 @@ body {
 .services__item:not(:last-child) {
   margin-right: 30px;
 }
-
 .services__foto {
   display: block;
 }
-
 .services__header {
   position: absolute;
   left: 0;
@@ -344,11 +323,9 @@ body {
 .our-team {
   background-color: #f5f4fa;
 }
-
 .our-team__container {
   flex-direction: column;
 }
-
 .our-team__title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -360,11 +337,9 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .our-team__list {
   display: flex;
 }
-
 .our-team__item {
   width: calc((100% - 90px) / 4);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -374,16 +349,13 @@ body {
 .our-team__item:not(:last-child) {
   margin-right: 30px;
 }
-
 .our-team__foto {
   display: block;
 }
-
-.our-team__wrapper {
+.our-team_wrapper {
   padding-top: 30px;
   text-align: center;
 }
-
 .our-team__member-name {
   margin-top: 0;
   margin-bottom: 10px;
@@ -395,7 +367,6 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .our-team__member-specialization {
   margin-top: 0;
   margin-bottom: 0;
@@ -413,7 +384,6 @@ body {
   padding: 16px 32px 30px 32px;
   justify-content: center;
 }
-
 .social-networks__item {
   display: flex;
   align-items: center;
@@ -424,7 +394,6 @@ body {
 .social-networks__item:not(:last-child) {
   margin-right: 10px;
 }
-
 .social-networks__icon {
   fill: currentColor;
   transition-property: color;
@@ -434,7 +403,6 @@ body {
 .social-networks__link:hover .social-networks__icon, .social-networks__link:active .social-networks__icon, .social-networks__link:focus .social-networks__icon {
   color: #ffffff;
 }
-
 .social-networks__link {
   display: flex;
   padding: 12px;
@@ -448,11 +416,17 @@ body {
 .social-networks__link:hover, .social-networks__link:focus, .social-networks__link:active {
   background-color: #2196f3;
 }
+.social-networks__footer-link {
+  display: flex;
+  padding: 12px;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+}
 
 .clients__container {
   flex-direction: column;
 }
-
 .clients__title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -464,20 +438,16 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .clients__list {
   display: flex;
   align-items: center;
 }
-
 .clients__logo:not(:last-child) {
   margin-right: 30px;
 }
-
 .clients__logo-icon {
   fill: currentColor;
 }
-
 .clients__link {
   display: flex;
   align-items: center;
@@ -501,7 +471,6 @@ body {
   flex-direction: column;
   justify-content: center;
 }
-
 .portfolio__title {
   margin-top: 0;
   margin-bottom: 50px;
@@ -518,11 +487,9 @@ body {
   margin-bottom: 50px;
   display: flex;
 }
-
 .filter-bar__item:not(:last-child) {
   margin-right: 8px;
 }
-
 .filter-bar__button {
   display: inline-block;
   padding: 6px 22px;
@@ -554,7 +521,6 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-
 .works__card {
   width: calc((100% - 60px) / 3);
   margin-right: 30px;
@@ -572,7 +538,6 @@ body {
 .works__card:hover, .works__card:focus, .works__card:active {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
 }
-
 .works__link {
   text-decoration: none;
   transition-property: color;
@@ -582,16 +547,13 @@ body {
 .works__link:hover, .works__link:focus, .works__link:active {
   color: #2196f3;
 }
-
 .works__image {
   display: block;
 }
-
 .works__image-wrapper {
   position: relative;
   overflow: hidden;
 }
-
 .works__meta {
   position: absolute;
   bottom: 100;
@@ -615,14 +577,12 @@ body {
 .works__card:hover .works__meta {
   transform: translateY(-100%);
 }
-
 .works__group-wrapper {
   padding: 20px 24px;
   border-bottom: 1px solid #eeeeee;
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
 }
-
 .works__image-title {
   margin-top: 0;
   margin-bottom: 4px;
@@ -633,7 +593,6 @@ body {
   letter-spacing: 0.06em;
   color: #212121;
 }
-
 .works__group-name {
   margin-top: 0;
   margin-bottom: 0;
@@ -683,7 +642,6 @@ body {
   transition-duration: 1000ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
 .contact-form__close-button {
   position: absolute;
   right: 8px;
@@ -700,7 +658,6 @@ body {
   cursor: pointer;
   fill: currentColor;
 }
-
 .contact-form__close-icon {
   transition-property: color;
   transition-duration: 250ms;
@@ -710,7 +667,6 @@ body {
 .contact-form__close-icon .contact-form__close-button:active {
   color: #2196f3;
 }
-
 .contact-form__title {
   margin: 0;
   margin-bottom: 12px;
@@ -722,7 +678,6 @@ body {
   letter-spacing: 0.03em;
   color: #212121;
 }
-
 .contact-form__wrapper {
   position: relative;
   margin-bottom: 10px;
@@ -732,14 +687,12 @@ body {
   align-items: flex-start;
   color: #212121;
 }
-
 .contact-form__wrapper-coment {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 20px;
 }
-
 .contact-form__label {
   margin-bottom: 4px;
   font-family: "Roboto", sans-serif;
@@ -749,7 +702,6 @@ body {
   letter-spacing: 0.01em;
   color: #757575;
 }
-
 .contact-form__field {
   min-width: 448px;
   height: 40px;
@@ -778,7 +730,12 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-
+.contact-form__field-coment {
+  width: 448px;
+  min-height: 120px;
+  padding: 12px 16px;
+  resize: none;
+}
 .contact-form__icon {
   position: absolute;
   bottom: 11px;
@@ -792,18 +749,16 @@ body {
   color: #2196f3;
 }
 
-.contact-form__field-coment {
-  width: 448px;
-  min-height: 120px;
-  padding: 12px 16px;
-  resize: none;
-}
-
-.contact-form__wrapper-agreement {
+.agreement {
+  position: relative;
   margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  color: #212121;
 }
-
-.contact-form__agreement-label {
+.agreement__label {
   display: flex;
   margin-bottom: 0;
   margin-left: auto;
@@ -815,14 +770,13 @@ body {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  color: #757575;
 }
-
-.contact-form__agreement-link {
+.agreement__link {
   margin-left: 5px;
   color: #2196f3;
 }
-
-.contact-form__checkbox-input {
+.agreement__checkbox-input {
   width: 16px;
   height: 15px;
   position: absolute;
@@ -836,8 +790,7 @@ body {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
-
-.contact-form__wrapper-icon {
+.agreement__wrapper-icon {
   display: flex;
   width: 16px;
   height: 15px;
@@ -852,24 +805,22 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-form__checkbox-input:checked + .contact-form__wrapper-icon {
+.agreement__checkbox-input:checked + .agreement__wrapper-icon {
   border-color: transparent;
   background-color: #2196f3;
 }
-
-.contact-form__checkbox-icon {
+.agreement__checkbox-icon {
   fill: currentColor;
   opacity: 0;
   transition-property: color, opacity;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-form__checkbox-input:checked + .contact-form__wrapper-icon .contact-form__checkbox-icon {
+.agreement__checkbox-input:checked + .agreement__wrapper-icon .agreement__checkbox-icon {
   color: #ffffff;
   opacity: 1;
 }
-
-.contact-form__button {
+.agreement__button {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -895,7 +846,7 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.contact-form__button:hover, .contact-form__button:focus, .contact-form__button:active {
+.agreement__button:hover, .agreement__button:focus, .agreement__button:active {
   color: rgba(255, 255, 255, 0.85);
 }
 
@@ -904,7 +855,6 @@ body {
   padding-bottom: 60px;
   background-color: #2f303a;
 }
-
 .footer__container {
   width: 1200px;
   padding-left: 15px;
@@ -914,7 +864,9 @@ body {
   display: flex;
   align-items: baseline;
 }
-
+.footer__adress-container {
+  display: block;
+}
 .footer__logo {
   display: block;
   margin-bottom: 20px;
@@ -925,60 +877,15 @@ body {
 .footer__logo .logo__word-web {
   color: #2196f3;
 }
-
-.footer__adress-item:not(:last-child) {
-  margin-bottom: 9px;
-}
-
-.footer__physical-address {
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: #ffffff;
-}
-
-.footer__tel,
-.footer__email {
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.7;
-  letter-spacing: 0.03em;
-  color: rgba(255, 255, 255, 0.6);
-}
-
-.footer__link {
-  transition-property: color;
-  transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.footer__link:hover, .footer__link:active, .footer__link:focus {
-  color: #2196f3;
-}
-
-.social-networks__footer-link {
-  display: flex;
-  padding: 12px;
-  color: #fff;
-  background-color: rgba(255, 255, 255, 0.1);
-  border-radius: 50%;
-}
-
-.footer .social-networks {
-  padding: 0;
-}
-
 .footer__join-container {
   display: flex;
   flex-direction: column;
   min-width: 206px;
   margin-left: 70px;
 }
-
+.footer__join-container .social-networks {
+  padding: 0;
+}
 .footer__join-title {
   margin-bottom: 20px;
   margin-top: 0;
@@ -991,20 +898,48 @@ body {
   color: #ffffff;
 }
 
-.footer__subscribe-form {
+.adress__item:not(:last-child) {
+  margin-bottom: 9px;
+}
+.adress__physical-address {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+.adress__tel, .adress__email {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.6);
+}
+.adress__link {
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.adress__link:hover, .adress__link:active, .adress__link:focus {
+  color: #2196f3;
+}
+
+.subscription {
   margin-left: 93px;
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
 }
-
-.footer__subscription-wrapper {
+.subscription__wrapper {
   display: flex;
   flex-direction: column;
   margin-right: 12px;
 }
-
-.footer__subscription-label {
+.subscription__label {
   margin-bottom: 20px;
   margin-top: 0;
   text-transform: uppercase;
@@ -1015,8 +950,7 @@ body {
   letter-spacing: 0.03em;
   color: #ffffff;
 }
-
-.footer__subscription-input {
+.subscription__input {
   padding: 15px 16px;
   min-width: 358px;
   height: 50px;
@@ -1029,7 +963,7 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__subscription-input::placeholder {
+.subscription__input::placeholder {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 16px;
@@ -1040,14 +974,13 @@ body {
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__subscription-input:hover, .footer__subscription-input:focus {
+.subscription__input:hover, .subscription__input:focus {
   border-color: #2196f3;
 }
-.footer__subscription-input:hover.footer__subscription-input::placeholder, .footer__subscription-input:focus.footer__subscription-input::placeholder {
+.subscription__input:hover.subscription__input::placeholder, .subscription__input:focus.subscription__input::placeholder {
   color: #2196f3;
 }
-
-.footer__subscription-button {
+.subscription__button {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -1070,23 +1003,29 @@ body {
   border-color: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-
-.footer__subscription-icon {
+.subscription__icon {
   cursor: pointer;
   fill: currentColor;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__subscription-button:focus .footer__subscription-icon, .footer__subscription-button:hover .footer__subscription-icon, .footer__subscription-button:active .footer__subscription-icon {
+.subscription__button:focus .subscription__icon, .subscription__button:hover .subscription__icon, .subscription__button:active .subscription__icon {
   color: rgba(255, 255, 255, 0.85);
 }
-
-.footer__button-span {
+.subscription__button-span {
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer__subscription-button:focus .footer__button-span, .footer__subscription-button:hover .footer__button-span, .footer__subscription-button:active .footer__button-span {
+.subscription__button:focus .subscription__button-span, .subscription__button:hover .subscription__button-span, .subscription__button:active .subscription__button-span {
   color: rgba(255, 255, 255, 0.85);
+}
+
+.social-networks__footer-link {
+  display: flex;
+  padding: 12px;
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
 }/*# sourceMappingURL=main.css.map */
